1) displaying RSS item <title> and <description>;  2) feature: add RSS feed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,17 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="loading_rss_feeds">Loading RSS feeds</string>
-    <string name="loading_rss_feed_with_title">Loading RSS feed</string>
+    <string name="loading_rss_feed_with_title">Loading</string>
     <string name="retry">Retry</string>
     <string name="no_rss_feeds">No RSS feeds</string>
-    <string name="title_activity_rss_feed_items">Rss Feed Items</string>
+    <string name="title_activity_rss_items">Rss Items</string>
     <string name="rss_feed_is_empty">RSS feed is empty</string>
+    <string name="title_activity_rss_item">RSS</string>
+    <string name="add_rss_feed">Add RSS feed</string>
+    <string name="hint_add_feed">Feed URL</string>
+    <string name="add_rss_feed_positive_button">Add RSS feed</string>
+    <string name="add_rss_feed_notification_url_is_invalid">The URL you\'ve entered is invalid. Please enter correct RSS feed url</string>
+    <string name="cannot_add_rss_feed">Couldn\'t add RSS feed.</string>
+    <string name="cause">Cause</string>
 
 </resources>
